# BoatshineOS

./: Cargo.toml  README.md  build.rs  shell.nix
.cargo/: config.toml
kernel/: Cargo.toml
kernel/.cargo/: config.toml
kernel/src/: lib.rs  main.rs
kernel/src/allocator/: mod.rs
kernel/src/framebuffer/: mod.rs
kernel/src/gdt/: mod.rs
kernel/src/interrupts/: mod.rs  pic.rs
kernel/src/logger/: mod.rs
kernel/src/macros/: mod.rs
kernel/src/memory/: mod.rs
kernel/src/panic/: mod.rs
kernel/src/task/: keyboard.rs  mod.rs
kernel/src/vga/: mod.rs
src/: lib.rs  main.rs
src/vga/: mod.rs
