[package]
name = "boatshineos"
version = "0.1.0"
edition = "2021"
license = "./LICENSE"

[build-dependencies]
bootloader = "0.11"
bs-kernel = { path = "kernel", artifact = "bin", target = "x86_64-unknown-none" }

[dependencies]
# used for UEFI booting in QEMU
ovmf-prebuilt = "0.1.0-alpha.1"

[workspace]
members = ["kernel"]

[profile.dev.package."*"]
debug = false
opt-level = 3

[profile.dev]
strip = true